--- a/ParDis/.classpath
+++ b/ParDis/.classpath
@@ -13,5 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFx"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/javafx"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ByCrypt"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
